--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="block" mode="sideBarMode$ | async"
+<div class="block"
         [ngStyle.lt-sm]="{'width': '100%', 'background': 'red'}"
         [ngStyle.sm]="{'width.px': 270, 'background': 'green'}"
         [ngStyle.gt-sm]="{'width.px': 600, 'background': 'beige'}"
